--- a/app/src/main/res/layout/fragment_conversion.xml
+++ b/app/src/main/res/layout/fragment_conversion.xml
@@ -3,25 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/bg_with_header">
+    android:background="@drawable/bg_with_header"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        app:cardCornerRadius="5dp">
+        android:layout_marginStart="@dimen/margin_10dp"
+        android:layout_marginTop="@dimen/margin_10dp"
+        android:layout_marginEnd="@dimen/margin_10dp"
+        app:cardCornerRadius="@dimen/card_radius_5dp">
 
         <SearchView
             android:id="@+id/sv_conversion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:iconifiedByDefault="false"
-            android:inputType="text"
             android:imeOptions="flagNoExtractUi"
+            android:inputType="text"
             android:queryBackground="@null"
             android:queryHint="@string/search_hint" />
 
@@ -31,5 +30,5 @@
         android:id="@+id/rv_conversion"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp" />
+        android:layout_margin="@dimen/margin_5dp" />
 </LinearLayout>
