--- a/app/src/main/res/layout/activity_converters.xml
+++ b/app/src/main/res/layout/activity_converters.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             android:paddingStart="0dp"
-            android:paddingEnd="@dimen/margin_5dp"
+            android:paddingEnd="@dimen/padding_5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
