--- a/app/src/main/res/layout/fragment_unit_search.xml
+++ b/app/src/main/res/layout/fragment_unit_search.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_with_header"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
@@ -29,6 +29,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_unit_search"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/bg_white"
+        android:paddingStart="@dimen/padding_5dp"
+        android:paddingEnd="@dimen/padding_5dp" />
 
 </LinearLayout>
