--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,6 @@
     <dimen name="margin_20dp">20dp</dimen>
     <dimen name="card_radius_20dp">20dp</dimen>
     <dimen name="card_radius_5dp">5dp</dimen>
+    <dimen name="padding_10dp">10dp</dimen>
+    <dimen name="padding_5dp">5dp</dimen>
 </resources>
