--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.MainActivity">
+    tools:mContext=".ui.main.MainActivity">
 
     <FrameLayout
         android:id="@+id/fl_home"
@@ -18,6 +18,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:foreground="?attr/selectableItemBackground"
-        app:menu="@menu/menu_navigation_bottom"/>
+        app:menu="@menu/menu_navigation_bottom" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
