--- a/app/src/main/res/layout/fragment_conversion.xml
+++ b/app/src/main/res/layout/fragment_conversion.xml
@@ -9,9 +9,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_10dp"
-        android:layout_marginTop="@dimen/margin_10dp"
-        android:layout_marginEnd="@dimen/margin_10dp"
+        android:layout_marginStart="@dimen/margin_5dp"
+        android:layout_marginTop="@dimen/margin_5dp"
+        android:layout_marginEnd="@dimen/margin_5dp"
         app:cardCornerRadius="@dimen/card_radius_5dp">
 
         <SearchView
@@ -30,5 +30,5 @@
         android:id="@+id/rv_conversion"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/margin_5dp" />
+        android:padding="@dimen/padding_3dp" />
 </LinearLayout>
