--- a/app/src/main/res/layout/item_conversion.xml
+++ b/app/src/main/res/layout/item_conversion.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?android:selectableItemBackground"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="5dp">
+    android:layout_margin="@dimen/margin_2dp"
+    app:cardCornerRadius="@dimen/card_radius_5dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
