--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="text_color_white">#ffffff</color>
     <color name="bg_white">#ffffff</color>
     <color name="stroke_color_grey">#DDDDDD</color>
+    <color name="text_color_black">#000000</color>
 </resources>
