--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -39,8 +39,24 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="@string/preference_title_display"
+        android:title="@string/preference_title_other"
         app:iconSpaceReserved="false">
+
+        <Preference
+            android:key="about_dialog"
+            android:title="@string/preference_title_about"
+            app:allowDividerAbove="true"
+            app:iconSpaceReserved="false" />
+
+        <PreferenceScreen
+            android:summary="https://github.com/toandv98/MyUnitConverter.git"
+            android:title="Source code"
+            app:allowDividerAbove="true"
+            app:iconSpaceReserved="false">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="https://github.com/toandv98/MyUnitConverter.git" />
+        </PreferenceScreen>
 
     </PreferenceCategory>
 </PreferenceScreen>
