--- a/app/src/main/res/layout/item_custom_conversion.xml
+++ b/app/src/main/res/layout/item_custom_conversion.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="@dimen/margin_10dp"
-        android:textColor="@color/text_color_black"
+        android:textColor="?android:attr/textColorPrimary"
         android:textSize="@dimen/text_size_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_item_history"
@@ -39,8 +39,9 @@
         android:layout_marginEnd="@dimen/margin_10dp"
         android:drawableEnd="@drawable/ic_history_orange"
         android:drawablePadding="@dimen/padding_5dp"
+        app:drawableTint="?attr/colorAccent"
         android:gravity="center"
-        android:textColor="@color/text_color_black"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
