--- a/app/src/main/res/layout/item_custom_unit.xml
+++ b/app/src/main/res/layout/item_custom_unit.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_20dp"
         android:layout_marginEnd="@dimen/margin_10dp"
-        android:textColor="@color/text_color_black"
+        android:textColor="?android:attr/textColorPrimary"
         android:textSize="@dimen/text_size_medium"
         app:layout_constraintBottom_toTopOf="@+id/tv_item_unit_value"
         app:layout_constraintEnd_toStartOf="@+id/btn_delete_unit"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_20dp"
         android:layout_marginEnd="@dimen/margin_10dp"
-        android:textColor="@color/text_color_black"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_delete_unit"
         app:layout_constraintStart_toEndOf="@+id/iv_unit_edit"
