--- a/app/src/main/res/drawable/bg_rounded_top.xml
+++ b/app/src/main/res/drawable/bg_rounded_top.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/bg_white" />
+    <solid android:color="?android:attr/colorBackground" />
 
     <corners
         android:topLeftRadius="@dimen/card_radius_10dp"
