--- a/app/src/main/res/drawable/bg_with_header.xml
+++ b/app/src/main/res/drawable/bg_with_header.xml
@@ -2,9 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/white" />
+            <solid android:color="?android:attr/colorBackground" />
         </shape>
     </item>
+
     <item
         android:bottom="@dimen/bottom_bg_header_"
         android:left="@dimen/left_right_bg_header_"
@@ -13,8 +14,8 @@
         <shape android:shape="oval">
             <gradient
                 android:angle="90"
-                android:endColor="#FFFFFF"
-                android:startColor="#DDDDDD" />
+                android:endColor="?attr/colorPrimary"
+                android:startColor="?attr/colorPrimaryDark" />
         </shape>
     </item>
     <item
@@ -23,7 +24,7 @@
         android:right="@dimen/left_right_bg_header"
         android:top="@dimen/top_bg_header">
         <shape android:shape="oval">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="?attr/colorPrimary" />
         </shape>
     </item>
 </layer-list>
