--- a/app/src/main/res/layout-land/activity_converters.xml
+++ b/app/src/main/res/layout-land/activity_converters.xml
@@ -9,13 +9,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary">
+        android:background="?attr/colorPrimary">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_converters"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
             android:paddingStart="0dp"
             android:paddingEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +84,8 @@
             android:layout_marginEnd="5dp"
             android:clickable="true"
             android:focusable="true"
-            app:backgroundTint="@color/bg_white"
+            android:tint="?attr/colorAccent"
+            app:backgroundTint="?android:attr/colorBackground"
             app:elevation="0dp"
             app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="@+id/edt_converters_input"
@@ -122,7 +122,8 @@
             android:layout_marginEnd="5dp"
             android:clickable="true"
             android:focusable="true"
-            app:backgroundTint="@color/bg_white"
+            android:tint="?attr/colorAccent"
+            app:backgroundTint="?android:attr/colorBackground"
             app:elevation="0dp"
             app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="@+id/edt_converters_result"
