--- a/app/src/main/res/layout/fragment_conversion.xml
+++ b/app/src/main/res/layout/fragment_conversion.xml
@@ -9,10 +9,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_5dp"
-        android:layout_marginTop="@dimen/margin_5dp"
-        android:layout_marginEnd="@dimen/margin_5dp"
-        app:cardCornerRadius="@dimen/card_radius_5dp">
+        android:layout_margin="@dimen/margin_10dp"
+        app:cardCornerRadius="@dimen/card_radius_20dp">
 
         <SearchView
             android:id="@+id/sv_conversion"
