--- a/app/src/main/res/layout/fragment_custom.xml
+++ b/app/src/main/res/layout/fragment_custom.xml
@@ -4,7 +4,7 @@
     android:id="@+id/container_custom_tab"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_with_header"
+    android:background="?attr/colorPrimary"
     android:orientation="vertical">
 
     <LinearLayout
@@ -16,8 +16,8 @@
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_5dp"
-            app:cardCornerRadius="@dimen/card_radius_5dp">
+            android:layout_margin="@dimen/margin_10dp"
+            app:cardCornerRadius="@dimen/card_radius_20dp">
 
             <SearchView
                 android:id="@+id/sv_custom"
